--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -109,8 +109,8 @@
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/user_avatar"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
                         android:layout_marginLeft="@dimen/activity_vertical_margin"
                         android:layout_marginRight="@dimen/activity_vertical_margin"
                         android:src="@drawable/avatar"
@@ -133,7 +133,7 @@
                         android:text="@string/user_register_login"
                         android:textSize="18sp" />
 
-                    <TextView
+                    <!-- <TextView
                         android:id="@+id/user_email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -144,7 +144,7 @@
                         android:fontFamily="sans-serif-medium"
                         android:gravity="right"
                         android:text="@string/user_register_login_text"
-                        android:textSize="15sp" />
+                        android:textSize="15sp" /> -->
 
                 </RelativeLayout>
 
