--- a/app/src/main/res/layout/activity_cafe_list.xml
+++ b/app/src/main/res/layout/activity_cafe_list.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.faragostaresh.cafeyab.EventListActivity">
+    tools:context="com.faragostaresh.cafeyab.CafeListActivity">
 
     <FrameLayout
         android:id="@+id/content"
