--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -109,10 +109,10 @@
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/user_avatar"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_marginLeft="@dimen/activity_vertical_margin"
-                        android:layout_marginRight="@dimen/activity_vertical_margin"
+                        android:layout_width="42dp"
+                        android:layout_height="42dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
                         android:src="@drawable/avatar"
                         app:civ_border_color="@color/iron"
                         app:civ_border_width="1dp" />
@@ -124,8 +124,8 @@
                         android:layout_alignTop="@+id/user_avatar"
                         android:layout_centerHorizontal="true"
                         android:layout_marginBottom="8dp"
-                        android:layout_marginLeft="@dimen/activity_vertical_margin"
-                        android:layout_marginRight="@dimen/activity_vertical_margin"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
                         android:layout_marginTop="8dp"
                         android:layout_toLeftOf="@+id/user_avatar"
                         android:fontFamily="sans-serif"
