--- a/app/src/main/res/layout/list_row_cafe.xml
+++ b/app/src/main/res/layout/list_row_cafe.xml
@@ -35,6 +35,13 @@
                 android:layout_gravity="bottom|right"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/city_aria"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:textColor="@color/white" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
