--- a/app/src/main/res/layout/activity_map_list.xml
+++ b/app/src/main/res/layout/activity_map_list.xml
@@ -14,15 +14,13 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/message"
+        <fragment
+
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/activity_map_list" />
+            android:layout_height="match_parent"
+            tools:context="com.faragostaresh.cafeyab.MapListActivity" />
 
     </FrameLayout>
 
