--- a/app/src/main/res/layout/activity_cafe_list.xml
+++ b/app/src/main/res/layout/activity_cafe_list.xml
@@ -203,12 +203,12 @@
                             android:layout_height="wrap_content">
 
                             <CheckBox
-                                android:id="@+id/filter_vegetarian_food"
+                                android:id="@+id/filter_discount"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="@dimen/activity_vertical_margin"
                                 android:layout_weight="1"
-                                android:text="@string/filter_vegetarianـfood" />
+                                android:text="@string/filter_discount" />
 
                             <CheckBox
                                 android:id="@+id/filter_wifi"
