--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,7 +94,7 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="240dp"
                 android:background="@color/white"
@@ -106,7 +106,7 @@
                     android:layout_height="match_parent"
                     android:scrollbars="none" />
 
-            </LinearLayout>
+            </LinearLayout> -->
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
