--- a/app/src/main/res/layout/activity_cafe_list.xml
+++ b/app/src/main/res/layout/activity_cafe_list.xml
@@ -317,7 +317,7 @@
 
     </FrameLayout>
 
-    <android.support.design.widget.BottomNavigationView
+    <!-- <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -325,7 +325,13 @@
         android:background="@color/colorPrimary"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/navigation" /> -->
+
+    <com.ashokvarma.bottomnavigation.BottomNavigationBar
+        android:layout_gravity="bottom"
+        android:id="@+id/bottom_navigation_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
 
