--- a/app/src/main/res/layout/grid_item_main.xml
+++ b/app/src/main/res/layout/grid_item_main.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@drawable/background_box"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:background="@color/colorBackground"
+    android:padding="5dp" >
 
     <com.faragostaresh.extra.SquareImageView
         android:id="@+id/picture"
@@ -26,4 +29,4 @@
         android:paddingLeft="@dimen/main_grid_text_padding_left"
         android:paddingRight="@dimen/main_grid_text_padding_right"/>
 
-</FrameLayout>
+</LinearLayout>
